Add second part of the webpage
I add the second part to the html archive and some style with css. Also
I made a little changes on the css of first part.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@
 .top, .bottom {
     display: flex;
     justify-content: space-between;
-    margin: 16px 250px;
+    margin: 16px 220px;
+    align-items: center;
 }
 
 .bottom {
@@ -27,13 +28,10 @@
     list-style-type: none;
 }
 
-a {
-    text-decoration: none;
-}
-
 p, a {
     color: #e5e7eb;
-    font-size: 18px; 
+    font-size: 18px;
+    text-decoration: none;
 }
 
 h1 {
@@ -51,4 +49,45 @@ h1 {
     border: none;
     border-radius: 8px;
     padding: 10px 20px;
+}
+
+/* the second part of the webpage*/
+
+.second {
+    display: flex;
+    flex-direction: column;
+    margin-top: 16px;
+    margin-left: 220px;
+    margin-right: 220px;
+    margin-bottom: 80px;
+    align-items: center;
+}
+
+h2 {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 800;
+}
+
+.pictures {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    flex-basis: 80px;
+} 
+
+.square {
+    border: solid #3882f6;
+    border-radius: 8px;
+    width: 160px;
+    height: 160px;
+    margin: 10px;
 }
