--- a/styles.css
+++ b/styles.css
@@ -123,9 +123,66 @@ body {
         }
         .by{
             align-self: flex-end;
+            font-size: 24px;
         }
     }
-    
-    
+       
+}
+/* fourth part */
+
+.fourth{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+
+    .window-container{
+        background-color: #3882f6;
+        color: #e5e7eb;
+        display: flex;
+        
+        align-items: center;
+        flex-basis: 1000px;
+        margin: 90px 200px;
+        padding: 30px 70px;
+        border: none;
+        border-radius: 8px;
+
+        h3 {
+            font-size: 24px;
+            margin: 0;
+            padding-bottom: 0;
+        }
+
+        .window-paragraph {
+            font-size: 18px;
+            padding-top: 0;
+            margin: 0;
+        }
+
+        .window-button {
+            background-color: #3882f6;
+            border: solid #f9faf8;
+            color: #f9faf8;
+            border-radius: 8px;
+            padding: 5px 30px;
+            margin-left: auto;
+
+        }
+    }
 }
 
+/*footer*/
+
+footer{
+    width: 100%;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+
+    .footer-container {
+        color: #e5e7eb;
+        font-size: 18px;
+    }
+}
